# hydra-achievement-manager

./: .gitignore  App.tsx  HYDRA_ACHIEVEMENTS_AND_WINE_PATHS.md  README.md  build-windows.sh  build.sh  config.js  constants.tsx  formatters.ts  index.css  index.html  index.tsx  main.js  package-lock.json  package.json  preload.js  tailwind.config.ts  tauri-api.ts  tsconfig.json  types.ts  updates.json  version-switch.js  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  version.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logger.rs  main.rs  steam_integration.rs  steam_monitor.rs  wine.rs
src-tauri/src/api/: hydra.rs  mod.rs  steam.rs
src-tauri/src/commands/: achievements.rs  backup.rs  cache_system.rs  connections.rs  directories.rs  game_lookup.rs  language.rs  mod.rs  monitoring.rs  retro_achievements.rs  settings.rs  steam.rs  ui.rs
src-tauri/src/connections/: hydra.rs  mod.rs  steam.rs  types.rs
src-tauri/src/integrations/: mod.rs
src-tauri/src/integrations/hydra/: hydra_api.rs  hydra_launcher.rs  hydra_launcher_paths.rs  hydra_level_db.rs  hydra_types.rs  mod.rs
src-tauri/src/integrations/retro_achievements/: mod.rs  retro_achievements_api.rs  retro_achievements_types.rs
src-tauri/src/integrations/steam/: mod.rs  monitor.rs  (+6 more)
src-tauri/src/models/: mod.rs
src-tauri/src/monitor/: mod.rs
src-tauri/src/parser/: mod.rs
src-tauri/src/unlocker/: mod.rs
src-tauri/src/utils/: cache.rs  exporter.rs  http.rs  mod.rs  secrets.rs  settings.rs
(+118 files in other folders)
